[tool.poetry]
name = "python-api-development"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
fastapi = {extras = ["all"], version = "^0.109.0"}
docker = "^7.0.0"
sqlalchemy = "^2.0.25"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
