[tool.poetry]
name = "python-api-development"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
fastapi = {extras = ["all"], version = "^0.109.0"}
docker = "^7.0.0"
sqlalchemy = "^2.0.25"
uvicorn = "^0.27.0.post1"
httpie = "^3.2.2"
black = "^24.1.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"
passlib = "^1.7.4"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
